Home LeftSide Added & Some design modified

--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/NotFound/NotFound.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/NotFound/NotFound.css
@@ -1,9 +1,10 @@
 .not-found {
-    border: 1px solid lightgray;
+    border: 1px solid #30363D;
     border-radius: 5px;
     margin-top: 10px;
     padding: 20px;
 }
 .not-found p {
     margin: 0;
+    color: #8B949E;
 }
