--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Repository/Repository.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Repository/Repository.css
@@ -1,15 +1,10 @@
 .repo {
-    border: 1px solid lightsteelblue;
+    border: 1px solid #30363D;
     border-radius: 5px;
     margin: 2%;
     text-align: left;
     padding: 10px;
 }
-/* .repo h2 {
-    margin: 0;
-    font-size: 15px;
-    color: #0D37C3;
-} */
 .repo a {
     text-decoration: none;
     color: #2085FF;
@@ -23,6 +18,11 @@
     margin: 0;
     padding: 2px 0;
     font-size: 13px;
+    color: #8B949A;
+}
+.repo > p {
+    font-size: 12px;
+    color: #8B949A;
 }
 .repo-name {
     display: flex;
@@ -32,9 +32,10 @@
 .repo-name p {
     margin-left: 15px;
     font-size: 12px;
-    border: 1px solid lightgrey;
+    border: 1px solid #30363D;
     border-radius: 10px;
     padding: 1px 5px;
+    text-transform: capitalize;
 }
 .topics {
     /* background-color: #21262D; */
