--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
@@ -1,23 +1,16 @@
 .home-container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 5%;
-}
-.home-image img {
-    width: 80%;
-    border-radius: 50%;
+    grid-template-columns: 1.5fr 3fr;
+    margin-bottom: 10px;
 }
 .home-routing {
-    /* display: grid;
-    grid-template-rows: 1fr 5fr;
-    grid-row-gap: 10px; */
     margin-right: 5%;
 }
 .home-nav {
     display: flex;
     align-items: center;
     justify-content: left;
-    border: 1px solid lightgray;
+    border: 1px solid #30363D;
     border-radius: 5px;
     padding: 20px;
 }
