Footer component added

--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1.5fr 3fr;
     margin-bottom: 10px;
+    position: relative;
 }
 .home-routing {
     margin-right: 5%;
