--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Header/Header.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Header/Header.css
@@ -1,3 +1,6 @@
+.header-container > h2 {
+    margin-top: 8%;
+}
 .header {
     display: flex;
     align-items: center;
@@ -5,6 +8,11 @@
     background-color: #161B22;
     color: #C3CBD4;
     padding: 1%;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 .header a {
     margin: 10px;
