--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Header/Header.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Header/Header.css
@@ -28,3 +28,9 @@
 .title-color:hover {
     color: tomato;
 }
+
+@media only screen and (max-width: 900px) {
+    .header-container > h2 {
+        margin-top: 10%;
+    }
+}
