--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: left;
+    flex-wrap: wrap;
     border: 1px solid #30363D;
     border-radius: 5px;
     padding: 20px;
@@ -25,4 +26,11 @@
 .home-nav a:hover {
     color: #F0F6FC;
     background-color: #1b1e22;
+}
+.home-nav div {
+    margin: 5px 0;
+}
+.home-nav div a svg {
+    font-size: 14px;
+    margin-right: 5px;
 }
