--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/HomeLeftSide/HomeLeftSide.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/HomeLeftSide/HomeLeftSide.css
@@ -61,3 +61,17 @@
 .body2-p2-2 {
     color: #56A2EA;
 }
+
+@media only screen and (max-width: 900px) {
+    .leftside-container {
+        margin: 2% 10%;
+    }
+    .body1-part1 {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        margin-bottom: 5px;
+    }
+    .body1-part1 > div {
+        margin-left: 15px;
+    }
+}
