--- a/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
+++ b/milestone-module/milestone09/module54.5-react-router-practice/01react-router-practice/src/components/Home/Home.css
@@ -34,3 +34,15 @@
     font-size: 14px;
     margin-right: 5px;
 }
+
+@media only screen and (max-width: 900px) {
+    .home-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-bottom: 10px;
+        position: relative;
+    }
+    .home-routing {
+        margin: 5%;
+    }
+}
