--- a/milestone-module/milestone09/module55.5-react-router-bonus-content/01simple-volunteers/src/components/Main/Main.css
+++ b/milestone-module/milestone09/module55.5-react-router-bonus-content/01simple-volunteers/src/components/Main/Main.css
@@ -1,5 +1,25 @@
+.main-body {
+    margin: 80px auto;
+}
 .activity-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
+    margin: 20px 10%;
+}
+
+@media only screen and (max-width: 1200px){
+    .activity-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (max-width: 600px){
+	.activity-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media only screen and (max-width: 425px){
+	.activity-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
