_redirects file & design added

--- a/milestone-module/milestone10/module56-simple-react-firebase-authentication/02simple-firebase-authentication/src/App.css
+++ b/milestone-module/milestone10/module56-simple-react-firebase-authentication/02simple-firebase-authentication/src/App.css
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+  margin: 50px;
+  background-color: #98FB98;
+  border-radius: 20px;
+  padding: 20px;
+}
+button {
+  margin: 0 10px;
+}
+.title-name {
+  color: orange;
+}
+.title-email {
+  color: blue;
 }
 
 .App-logo {
