--- a/milestone-module/milestone10/module56-simple-react-firebase-authentication/02simple-firebase-authentication/src/App.css
+++ b/milestone-module/milestone10/module56-simple-react-firebase-authentication/02simple-firebase-authentication/src/App.css
@@ -8,6 +8,12 @@
 button {
   margin: 0 10px;
 }
+.all-icon{
+  width: 24px;
+}
+.all-icon:hover {
+  color: tomato;
+}
 .title-name {
   color: orange;
 }
