Style added in the components

--- a/milestone-module/milestone10/module58-react-auth-integration-and-private-route/01router-firebase-integration/src/components/Header/Header.css
+++ b/milestone-module/milestone10/module58-react-auth-integration-and-private-route/01router-firebase-integration/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.header {
+    background-color: #c7c3c3;
+    padding: 15px;
+}
 .header nav a {
     margin-right: 20px;
     text-decoration: none;
