--- a/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Login/Login.css
+++ b/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Login/Login.css
@@ -3,6 +3,7 @@
     margin: 50px auto;
     border: 1px solid #95A0A7;
     box-sizing: border-box;
+    box-shadow: -10px 10px 10px rgba(255, 153, 0, 0.3);
     border-radius: 8px;
     display: flex;
     justify-content: center;
@@ -44,9 +45,42 @@
     border-radius: 5px;
     border: none;
     font-size: 20px;
+    cursor: pointer;
+}
+
+.form-submit:hover {
+    background-color: rgba(255, 153, 0, 0.5);
 }
 
 .form-link {
     color: #FF9900;
     text-decoration: none;
+}
+
+.or-container {
+    display: grid;
+    grid-template-columns: 4fr 1fr 4fr;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10px;
+    margin-bottom: 20px;
+}
+
+.or-container > span {
+    text-align: center;
+}
+
+.or-container > div > hr {
+    background-color: 1px solid #95A0A7;
+}
+
+.form-container > div > button {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid #95A0A7;
+    margin-bottom: 30px;
 }
