--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Home/Services/Services.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Home/Services/Services.css
@@ -1,15 +1,18 @@
 .services-title {
     text-align: center;
     color: blue;
+    margin-top: 50px;
 }
-.services-title > span {
+
+.services-title>span {
     color: orange;
 }
+
 .services-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    margin: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 80px;
+    margin: 80px;
 }
 
 /* Make services Responsive: (according to Bootstrap) */
@@ -18,17 +21,24 @@
 @media only screen and (max-width: 576px) {
     .services-container {
         grid-template-columns: repeat(1, 1fr);
+        grid-gap: 50px;
+        margin: 40px;
     }
 }
+
 /* Medium */
 @media only screen and (min-width: 577px) and (max-width: 992px) {
     .services-container {
         grid-template-columns: repeat(2, 1fr);
+        grid-gap: 50px;
+        margin: 80px;
     }
 }
+
 /* Large */
-@media only screen and (min-width: 993px) and (max-width: 1400px) {
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
     .services-container {
-        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 30px;
+        margin: 80px;
     }
 }
