--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Footer/Footer.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Footer/Footer.css
@@ -1,9 +1,10 @@
 footer {
     background-color: rgba(128, 128, 128, 0.212);
-    padding: 30px;
+    padding: 40px;
 }
 footer > p {
     text-align: center;
     font-weight: 600;
     font-size: 18px;
+    margin: 0;
 }
