--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Header/Header.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Header/Header.css
@@ -1,7 +1,7 @@
-header {
+/* header {
     background-color: rgba(128, 128, 128, 0.212);
     padding: 10px;
 }
 header > h2 {
     text-align: center;
-}
+} */
