--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Login/Login.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Login/Login.css
@@ -1,6 +1,6 @@
 .form-container {
-    width: 40%;
-    margin: 90px auto;
+    width: 600px;
+    margin: 110px auto 50px;
     border: 1px solid salmon;
     box-sizing: border-box;
     border-radius: 5px;
@@ -9,7 +9,7 @@
 }
 .form-container > div {
     width: 90%;
-    padding: 20px;
+    padding: 20px 50px;
 }
 .form-title {
     font-size: 35px;
@@ -27,14 +27,15 @@
 }
 .input-group input {
     width: 100%;
-    height: 35px;
+    height: 45px;
     border: 1px solid #95A0A7;
     box-sizing: border-box;
     border-radius: 5px;
 }
 .form-container .submit-button {
     width: 100%;
-    height: 35px;
+    height: 45px;
+    font-size: 20px;
     margin: 10px 0;
     border: none;
     border-radius: 5px;
@@ -49,7 +50,7 @@
 }
 .form-container p a {
     text-decoration: none;
-    color: orange;
+    color: tomato;
     margin-left: 5px;
 }
 .form-container p a:hover {
@@ -63,15 +64,25 @@
 .or-container span {
     text-align: center;
 }
-.form-container button {
-    width: 100%;
-    height: 35px;
+.third-party-auth {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.third-party-auth button {
+    width: 200px;
+    height: 40px;
     margin: 10px 0;
     border: 1px solid gray;
     border-radius: 5px;
     background-color: white;
 }
-.form-container button img {
+.third-party-auth button:hover {
+    border: 1px solid tomato;
+}
+.third-party-auth button img {
     width: 25px;
     margin-right: 5px;
 }
