--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Header/Header.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Header/Header.css
@@ -1,7 +1,5 @@
-/* header {
-    background-color: rgba(128, 128, 128, 0.212);
-    padding: 10px;
+.signOut-button {
+    border: 1px solid whitesmoke;
+    border-radius: 5px;
+    font-weight: 500;
 }
-header > h2 {
-    text-align: center;
-} */
