--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/NotFound/NotFound.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/NotFound/NotFound.css
@@ -4,7 +4,7 @@
 }
 .notFound-container > img {
     width: 50%;
-    margin-top: 40px;
+    /* margin-top: 40px; */
 }
 
 
@@ -12,39 +12,36 @@
 @media only screen and (max-width: 576px) {
     .notFound-container > img {
         width: 100%;
-        margin-top: 180px;
-        margin-bottom: 100px;
+        margin: 35px 0;
     }
 }
 /* Small */
 @media only screen and (min-width: 577px) and (max-width: 768px) {
     .notFound-container > img {
         width: 90%;
-        margin-top: 160px;
-        margin-bottom: 80px;
+        margin: 30px 0;
     }
 }
 /* Medium */
 @media only screen and (min-width: 769px) and (max-width: 992px) {
     .notFound-container > img {
         width: 80%;
-        margin-top: 140px;
-        margin-bottom: 60px;
+        /* margin-top: 140px;
+        margin-bottom: 60px; */
     }
 }
 /* Large */
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
     .notFound-container > img {
         width: 70%;
-        margin-top: 90px;
-        margin-bottom: 50px;
+        /* margin-top: 90px;
+        margin-bottom: 50px; */
     }
 }
 /* X-Large */
 @media only screen and (min-width: 1201px) and (max-width: 1400px) {
     .notFound-container > img {
         width: 60%;
-        margin-top: 100px;
-        margin-bottom: 10px;
+        /* margin: 20px 0; */
     }
 }
