--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Footer/Footer.css
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/src/Pages/Shared/Footer/Footer.css
@@ -11,3 +11,11 @@ footer > p {
 footer span:hover {
     color: tomato;
 }
+
+/* Responsive Design */
+
+@media only screen and (max-width: 676px) {
+    footer > p {
+        font-size: 12px;
+    }
+}
