--- a/milestone-module/milestone10/module61-react-router-and-firebase-auth-recap/01trivago-booking/src/components/SinglePage/SignUp/SignUp.css
+++ b/milestone-module/milestone10/module61-react-router-and-firebase-auth-recap/01trivago-booking/src/components/SinglePage/SignUp/SignUp.css
@@ -9,14 +9,16 @@
 .register-form > h2 {
     margin: 20px 0;
     text-align: center;
-    color: blue;
+    color: #0D6EFD;
 }
-.register-form input {
+.register-form input:not([type=checkbox]) {
     display: block;
     width: 100%;
-    height: 50px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid lightgray;
     padding-left: 10px;
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 15px;
     border: 1px solid gray;
     border-radius: 5px;
