--- a/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
+++ b/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
@@ -14,6 +14,12 @@
     background-color: rgba(255, 153, 0, 0.3);
 }
 
+.pagination button {
+    margin-right: 10px;
+    background-color: white;
+    border: 1px solid orange;
+}
+
 @media screen and (max-width:1400px) {
     .shop-container {
         grid-template-columns: 4fr 2fr;
