Set Page state and Size state - Send search query to server

--- a/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
+++ b/milestone-module/milestone08/module48-simple-react-SPA-with-simple-E-commerce/01ema-john-simple/src/components/Shop/Shop.css
@@ -20,6 +20,11 @@
     border: 1px solid orange;
 }
 
+.pagination .selected {
+    background-color: orange;
+    color: white;
+}
+
 @media screen and (max-width:1400px) {
     .shop-container {
         grid-template-columns: 4fr 2fr;
